syntax = "proto3";

package Lansnoop;

message InterfaceTraffic {

    //  Maps interface ID's to current interface packet counts,
    //  but only for interfaces which have seen traffic since the
    //  InterfaceTraffic message.
    map<uint32, uint64> packet_counts = 1;
}
